--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -94,8 +94,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 256px; /* Original low-res size */
-            height: 256px;
+            width: 255px;
+            height: 169px;
             border: 2px solid #000;
             z-index: 1;
         }
